<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gameenchanter.SpecialEventsActivity">
    <com.jaredrummler.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_special_events_idol"
        android:textColor="@color/black_2"
        android:textSize="18sp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_special_events_idol">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_special_events_mini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white_2"
                android:paddingBottom="12dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:id="@+id/layout_special_events_mini_title"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/oval_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="35dp"
                        android:text="@string/mini_events"
                        android:textColor="@color/black_2"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_special_events_mini_title"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/text_special_events_mini_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mini_event_1"
                        android:textColor="@color/black_2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_mini_1_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_mini_1"
                        android:layout_marginTop="2dp"
                        android:text="@string/mini_event_1_answer"
                        android:textColor="@color/red_3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_mini_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_mini_1_answer"
                        android:layout_marginTop="10dp"
                        android:text="@string/mini_event_2"
                        android:textColor="@color/black_2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_mini_2_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_mini_2"
                        android:layout_marginTop="2dp"
                        android:text="@string/mini_event_2_answer"
                        android:textColor="@color/red_3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_mini_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_mini_2_answer"
                        android:layout_marginTop="10dp"
                        android:text="@string/mini_event_3"
                        android:textColor="@color/black_2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_mini_3_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_mini_3"
                        android:layout_marginTop="2dp"
                        android:text="@string/mini_event_3_answer"
                        android:textColor="@color/red_3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_mini_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_mini_3_answer"
                        android:layout_marginTop="10dp"
                        android:text="@string/mini_event_4"
                        android:textColor="@color/black_2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_mini_4_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_mini_4"
                        android:layout_marginTop="2dp"
                        android:text="@string/mini_event_4_answer"
                        android:textColor="@color/red_3"
                        android:textSize="18sp" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_special_events_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_special_events_mini"
                android:layout_marginTop="10dp"
                android:background="@color/white_2"
                android:paddingBottom="12dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:id="@+id/layout_special_events_close_title"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/oval_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="35dp"
                        android:text="@string/close_events"
                        android:textColor="@color/black_2"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_special_events_close_title"
                    android:layout_marginTop="2dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/text_special_events_close_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close_event_1"
                        android:textColor="@color/black_2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_close_1_part"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_close_1"
                        android:layout_marginTop="2dp"
                        android:text="@string/close_event_1_part"
                        android:textColor="@color/red_3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_close_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_close_1_part"
                        android:layout_marginTop="10dp"
                        android:text="@string/close_event_2"
                        android:textColor="@color/black_2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_close_2_part"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_close_2"
                        android:layout_marginTop="2dp"
                        android:text="@string/close_event_2_part"
                        android:textColor="@color/red_3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_close_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_close_2_part"
                        android:layout_marginTop="10dp"
                        android:text="@string/close_event_3"
                        android:textColor="@color/black_2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_special_events_close_3_part"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_special_events_close_3"
                        android:layout_marginTop="2dp"
                        android:text="@string/close_event_3_part"
                        android:textColor="@color/red_3"
                        android:textSize="18sp" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
