<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/layout_activity_blue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@color/white_1">

        <Button
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/oval_blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/blue_team"
            android:textColor="@color/blue_5"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_activity_special_events"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@color/white_1"
        android:layout_below="@+id/layout_activity_blue">

        <Button
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/oval_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/special_events"
            android:textColor="@color/black_1"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_activity_setting"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@color/white_1"
        android:layout_below="@+id/layout_activity_special_events">

        <Button
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/oval_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/setting"
            android:textColor="@color/gray_4"
            android:textSize="22sp" />

    </RelativeLayout>
</RelativeLayout>
